--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
-# Compiled class file
-*.class
+import java.util.Scanner;
+public class usluSayiHesaplama {
+    public static void main(String[] args){
+        int n,t;
 
-# Log file
-*.log
+        Scanner inp = new Scanner(System.in);
+        System.out.print("Üssü alınacak sayıyı giriniz: ");
+        n = inp.nextInt();
+        System.out.print("Üs olacak sayıyı giriniz: ");
+        t = inp.nextInt();
+        int total=1;
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+        for ( int i =1; i<=t; i++){
+            total *= n;
+        }
+        System.out.println("Cevap: " +total);
+    }
+}
